--- a/index.html
+++ b/index.html
@@ -18,23 +18,25 @@
           <h2 class="card-title">7 tech tips and tricks that you need to know</h2>
           <p class="card-body">Using these 7 proven tips from experts in the industry, you can save time, money and more!</p>
           <div class="card-footer">
-              <p class="card-read-time"><span>15</span> minute read</p>
+              <p class="card-read-time"><span>15</span> minute<br>read</p>
               <a href="#" class="card-btn">read more</a>
+              
           </div>
+          <p>
+            Photo by
+            <a
+              href="https://unsplash.com/@nik1toss?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+              >Nikita Katsevich</a
+            >
+            on
+            <a
+              href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+              >Unsplash</a
+            >
+          </p>
       </div>
     </div>
 
-    <p>
-      Photo by
-      <a
-        href="https://unsplash.com/@nik1toss?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-        >Nikita Katsevich</a
-      >
-      on
-      <a
-        href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-        >Unsplash</a
-      >
-    </p>
+    
   </body>
 </html>
